// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductFeaturesTable component Renders correctly When no features provided 1`] = `
<body>
  <div>
    <div>
      <table
        class="MuiTable-root Table-root-1 Table-oddColor-4 Table-noBorder-2"
      >
        <tbody
          class="MuiTableBody-root"
        />
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With default row pattern color 1`] = `
<body>
  <div>
    <div>
      <table
        class="MuiTable-root Table-root-13 Table-oddColor-16 Table-noBorder-14"
      >
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With default row pattern color and with border 1`] = `
<body>
  <div>
    <div>
      <table
        class="MuiTable-root Table-root-25 Table-oddColor-28"
      >
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With even row pattern color 1`] = `
<body>
  <div>
    <div>
      <table
        class="MuiTable-root Table-root-75 Table-evenColor-77 Table-noBorder-76"
      >
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With header row 1`] = `
<body>
  <div>
    <div>
      <table
        class="MuiTable-root Table-root-37 Table-oddColor-40"
      >
        <thead
          class="MuiTableHead-root ColorPair-root-49 ColorPair-pearl-51"
        >
          <div>
            Header Row
          </div>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
